# ghost-window-winapi

./: CMakeLists.txt  README.md  main.cpp  main_linux.cpp
.gitgub/workflows/: build_and_release.yml
.github/workflows/: build_and_release.yml
